change the horizontal scroll bar style, even though with split message helper, when print Ww and other chars may still have the issue of overflow, don't know how to solve it

--- a/chatapp/app/styles/app.css
+++ b/chatapp/app/styles/app.css
@@ -385,6 +385,7 @@ h3 {
   /*********************************scroll bar ***********************************/
 
   *::-webkit-scrollbar {
+    height: 5px; 
     width: 5px;
   }
 
